# rust-practice-axum

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: db.rs  error.rs  main.rs  model.rs  route.rs
