[package]
name = "rust-practice-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"

mongodb = "3.3.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

tower-http = { version = "0.6.6", features = ["cors"] }

futures = "0.3"

tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }